chore(sonarlint): remove code smells